--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@headlessui/react": "^2.1.1",
+    "@heroicons/react": "^2.1.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
