--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "astro": "^4.11.3",
     "framer-motion": "^11.3.0",
+    "jsdom": "^24.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.4"
