--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "animate.css": "^4.1.1",
     "astro": "^4.11.3",
+    "astro-carousel": "^2.0.8",
     "framer-motion": "^11.3.0",
     "jsdom": "^24.1.0",
     "react": "^18.3.1",
